--- a/anki_z76.html
+++ b/anki_z76.html
@@ -18,8 +18,8 @@
     <body>
         <table> 
             <tr>
-                <td style="background-color: green;">Komórka1-Ankiewicz 1P</td>
-                <td style="background-color: purple;">Komórka2-Ankiewicz 1P</td>
+                <td style="background-color: yellow;">Komórka1-Ankiewicz 1P</td>
+                <td style="background-color: red;">Komórka2-Ankiewicz 1P</td>
             </tr>
             <tr>
                 <td style="background-color: gray;">Komórka3-Ankiewicz 1P</td>
