--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href="anki_z80.html" target="strony">Zadanie 80</a><br>
         <a href="anki_z81.html" target="strony">Zadanie 81</a><br>
         <a href="anki_z82.html" target="strony">Zadanie 82</a><br>
-        <a href="anki_z83.html" target="strony">Zadanie 83</a><br>
+        <a href="anki_z83.html" target="_blank">Zadanie 83</a><br>
 		
 
       </td>
