--- a/anki_z76.html
+++ b/anki_z76.html
@@ -18,12 +18,12 @@
     <body>
         <table> 
             <tr>
-                <td style="background-color: 8;">Komórka1-Ankiewicz 1P</td>
-                <td style="background-color: 2;">Komórka2-Ankiewicz 1P</td>
+                <td style="background-color: fuchsia;">Komórka1-Ankiewicz 1P</td>
+                <td style="background-color: silver;">Komórka2-Ankiewicz 1P</td>
             </tr>
             <tr>
-                <td style="background-color: 14;">Komórka3-Ankiewicz 1P</td>
-                <td style="background-color: 5;">Komórka4-Ankiewicz 1P</td>
+                <td style="background-color: blue;">Komórka3-Ankiewicz 1P</td>
+                <td style="background-color:  maroon;">Komórka4-Ankiewicz 1P</td>
             </tr>
         </table>
     </body>
