--- a/anki_z76_kod.html
+++ b/anki_z76_kod.html
@@ -26,12 +26,12 @@
     <body>
         <table> 
             <tr>
-                <td style="background-color: green;">Komórka1-Ankiewicz 1P</td>
-                <td style="background-color: purple;">Komórka2-Ankiewicz 1P</td>
+                <td style="background-color: fuchsia;">Komórka1-Ankiewicz 1P</td>
+                <td style="background-color: silver;">Komórka2-Ankiewicz 1P</td>
             </tr>
             <tr>
-                <td style="background-color: gray;">Komórka3-Ankiewicz 1P</td>
-                <td style="background-color: teal;">Komórka4-Ankiewicz 1P</td>
+                <td style="background-color: blue;">Komórka3-Ankiewicz 1P</td>
+                <td style="background-color: maroon;">Komórka4-Ankiewicz 1P</td>
             </tr>
         </table>
     </body>
